CMAKE_MINIMUM_REQUIRED(VERSION 2.0)
INCLUDE(FindPkgConfig)
SET(CMAKE_CXX_FLAGS_RELEASE "-s")
PKG_CHECK_MODULES(PCRE REQUIRED libpcrecpp)

PROJECT("potatis")
SET(TARGET_NAME "potatis")
FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp)
ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${TARGET_NAME} ${PCRE_LDFLAGS})
INCLUDE_DIRECTORIES(${PCRE_INCLUDEDIR})
INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/potatis DESTINATION /usr/local/bin)
